# pinpoint

./: .env.example  .gitignore  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/server/: pyproject.toml  requirements.txt  vercel.json
apps/server/app/: .env.example  __init__.py  main.py  models.py  utils.py
apps/server/app/api/: main.py
apps/server/app/api/routes/: search.py
apps/server/app/core/: config.py
apps/server/app/exceptions/: gemini_exceptions.py  github_exceptions.py
apps/server/app/services/: gemini.py  github.py  utils.py
apps/server/app/tests/: conftest.py  test_main.py
apps/server/app/tests/api/routes/: test_search.py
apps/server/app/tests/gemini/: test_gemini.py
apps/server/app/tests/github/: test_github.py
apps/web/: .gitignore  .prettierrc.json  eslint.config.ts  index.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/src/: App.vue  index.d.ts
apps/web/src/assets/: main.css
apps/web/src/components/: NavBar.vue  RepoSelectModal.vue  ShinyText.vue  SvgIcon.vue
apps/web/src/router/: index.ts
apps/web/src/utils/: themeUtils.ts  urlUtils.ts
apps/web/src/views/: Home.vue  Search.vue
src/: App.vue
src/assets/: main.css
src/components/: SvgIcon.vue
src/router/: index.ts
src/views/: Home.vue  Search.vue
