[project]
name = "pinpoint"
version = "0.1.0"
description = "Discover answers from github issues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
    "githubkit[all]>=0.13.1",
    "instructor[google-genai]>=1.11.2",
    "httptools>=0.6.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
